Refactored to make it possible to have a module-info, needed to use incubator features.