@@ -1,4 +1,4 @@
-package solutions;
+package demo;
 
 /**
  * Example of Virtual Threads in Loom
@@ -12,7 +12,7 @@ public class Loom01_SimpleVirtualThread {
     public static void main(String[] args) throws InterruptedException {
         System.out.println("Loom 01: Virtual Thread");
 
-        Thread thread = Thread.ofVirtual().factory().newThread(() -> {
+        Thread thread = new Thread(() -> {
             System.out.println("Hello from thread: [" + Thread.currentThread() + "]");
         });
 
